# prompt-eval-rust

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose-portainer.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: build-push-docker.yml
.sqlx/: query-43f9911cc484163b32705705e831768c008256fcd67c2f16844d7d830fca8080.json
data/: dataset.json  dataset_v2.json
docker/: run_frpc.sh  run_nginx.sh  run_prompt_eval_rust.sh  run_prompt_eval_ui.sh
docker/nginx/: Dockerfile  default.conf
docs/: api-context-result.json  db-queries.sql  endpoints.md  osca-v7-insert.sql  prompt_for_ag_mentor.md  testing-plan.md
docs/API Test cases/: generated-cases.json  generated-prompt.md  postman-test-results.md  postman-tests.md
docs/Rust - Eval/: Get dashboard stats.yml  opencollection.yml
docs/Test cases/: input.md  new-context-based-result.json  new-prompt.json  new-test-case-with-context.json  osca-v3.json  osca-v4-eval-result.json  output.md  v9-test.json
docs/architecture/: architecture-plan.md  architecture.md  core-flow.md
docs/queries/: add-user-auth.sql  backfill-existing-data.sql  db-queries.sql
prompt-eval-ui/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
prompt-eval-ui/src/: proxy.ts
result/: eval_resualt_score_v3.md  eval_resualt_scored_with_modelv3.md  eval_resualt_v1.md  eval_resualt_v2.md
src/: app_state.rs  auth.rs  bootstrap.rs  db.rs  lib.rs  main.rs  models.rs  routes.rs  test_api.rs
src/handlers/: auth.rs  datasets.rs  evaluations.rs  mod.rs  (+2 more)
(+87 files in other folders)
