[package]
name = "prompt_eval"
version = "0.1.0"
edition = "2021"
default-run = "prompt_eval"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
jsonwebtoken = "9"
argon2 = "0.5"